; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_timerset.c_nn_timerset_rm.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_timerset.c_nn_timerset_rm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_timerset = type { i32 }
%struct.nn_timerset_hndl = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_timerset_rm(%struct.nn_timerset* %0, %struct.nn_timerset_hndl* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nn_timerset*, align 8
  %5 = alloca %struct.nn_timerset_hndl*, align 8
  %6 = alloca i32, align 4
  store %struct.nn_timerset* %0, %struct.nn_timerset** %4, align 8
  store %struct.nn_timerset_hndl* %1, %struct.nn_timerset_hndl** %5, align 8
  %7 = load %struct.nn_timerset_hndl*, %struct.nn_timerset_hndl** %5, align 8
  %8 = getelementptr inbounds %struct.nn_timerset_hndl, %struct.nn_timerset_hndl* %7, i32 0, i32 0
  %9 = call i32 @nn_list_item_isinlist(i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

12:                                               ; preds = %2
  %13 = load %struct.nn_timerset*, %struct.nn_timerset** %4, align 8
  %14 = getelementptr inbounds %struct.nn_timerset, %struct.nn_timerset* %13, i32 0, i32 0
  %15 = call i32* @nn_list_begin(i32* %14)
  %16 = load %struct.nn_timerset_hndl*, %struct.nn_timerset_hndl** %5, align 8
  %17 = getelementptr inbounds %struct.nn_timerset_hndl, %struct.nn_timerset_hndl* %16, i32 0, i32 0
  %18 = icmp eq i32* %15, %17
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i32 1, i32 0
  store i32 %20, i32* %6, align 4
  %21 = load %struct.nn_timerset*, %struct.nn_timerset** %4, align 8
  %22 = getelementptr inbounds %struct.nn_timerset, %struct.nn_timerset* %21, i32 0, i32 0
  %23 = load %struct.nn_timerset_hndl*, %struct.nn_timerset_hndl** %5, align 8
  %24 = getelementptr inbounds %struct.nn_timerset_hndl, %struct.nn_timerset_hndl* %23, i32 0, i32 0
  %25 = call i32 @nn_list_erase(i32* %22, i32* %24)
  %26 = load i32, i32* %6, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %12, %11
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @nn_list_item_isinlist(i32*) #1

declare dso_local i32* @nn_list_begin(i32*) #1

declare dso_local i32 @nn_list_erase(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
